updated product, stripe api, and styling

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-session": "^1.17.2",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
-    "strip": "^3.0.0"
+    "strip": "^3.0.0",
+    "stripe": "^8.176.0"
   },
   "repository": {
     "type": "git",
